✨ Server (v0.11.1): Added new Endpoints
